Prevent overflow when collapsing data panel

--- a/docs/index.css
+++ b/docs/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
   font-size: 12px;
   background-color: #444;
+  overflow: hidden;
 } 
 
 #tooltip {
